# yoburin-breed

./: .env  .gitignore  LICENSE  README.md  default_bus_layout.tres  export_presets.cfg  icon.svg.import  main.py  project.godot  pyproject.toml  test.py
addons/log/: log.gd  log_color_theme.gd  plugin.cfg  plugin.gd
addons/logger/: LogConfig.gd  LogConfig.gd.uid  LogSettings.gd  LogSettings.gd.uid  Microbe.gd  Microbe.gd.uid  _LogInternalPrinter.gd  _LogInternalPrinter.gd.uid  _ObjectParser.gd  _ObjectParser.gd.uid  log-stream.gd  log-stream.gd.uid  logger.gd.uid  plugin.cfg  plugin.gd  plugin.gd.uid
addons/reload_current_scene/: plugin.cfg  plugin.gd
python/: bilibili_client.py  config.py  log.py  model.py  network.py  websocket_server.py
python/models/: gift.py  godot.py  (+1 more)
resource/: AFF02FBDB5869534FEFC9C35D0CA07E0.png.import  game.tres  icon.svg.import
scene/: Main.tscn  Main.tscn11429680920.tmp  Main.tscn9221766029.tmp  Test.tscn  Yoburin.tscn  control_panel.tscn  control_panel.tscn6742727370.tmp  main_window.tscn  oldmain_window.tscn  test.tscn
src/: control_panel.gd  control_panel.gd.uid  game_manager.gd  game_manager.gd.uid  global_game_manager.gd  main.gd  main.gd.uid  main_window.gd  test.gd  test.gd.uid
代码/: game_manager.gd  game_manager.gd.uid  global_game_manager.gd  global_game_manager.gd.uid  state_machine.gd  yoburin.gd  游戏主界面.gd  物理史莱姆.gd  钱币.gd
场景/: Yoburin.tscn  mai4E7F.tmp  main_window.tscn  主界面.tscn  史莱姆.tscn  死亡监测.tscn  能工智人操作界面.tscn  钱币.tscn
资源/: 1756045089316.psd  AFF02FBDB5869534FEFC9C35D0CA07E0.png.import  icon.svg.import
(+302 files in other folders)
